tests/ui/test_fail/02-async_only.stderr
error[E0432]: unresolved import `self::blocking`
  --> $DIR/02-async_only.rs:11:15
   |
11 |     use self::blocking::my_fn;
   |               ^^^^^^^^ maybe a missing crate `blocking`?
